[package]
name = "allenap-tftp-offload"
description = "allenap's TFTP offload server"
version = "0.2.0"
authors = ["Gavin Panella <gavinpanella@gmail.com>"]
license = "AGPL-3.0"

documentation = "https://github.com/allenap/allenap-tftp-offload/blob/master/README.md"
homepage = "https://github.com/allenap/allenap-tftp-offload"
repository = "https://github.com/allenap/allenap-tftp-offload"

[dependencies]
allenap-libtftp = "^0.2.0"
clap = "^2.19.1"
slog = "^1.3.2"
slog-term = "^1.3.3"
