[package]
authors = ["Gavin Panella <gavinpanella@gmail.com>"]
description = "allenap's TFTP offload server"
homepage = "https://github.com/allenap/allenap-tftp-offload"
keywords = ["unsupported"]
license = "AGPL-3.0"
name = "allenap-tftp-offload"
readme = "README.md"
repository = "https://github.com/allenap/allenap-tftp-offload"
version = "0.2.2"

[dependencies]
allenap-libtftp = "^0.2.1"
clap = "^2.33.0"
slog = "^2.5.0"
slog-term = "^2.4.1"
